deploy/eks/frothly_alb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "frothly-ingress"
  namespace: "frothly-store"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/inbound-cidrs: 
    alb.ingress.kubernetes.io/security-groups: HttpOnlyEks
    # Have not tested this yet, but adding per spec:
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=frothly-store-access-logs    
  labels:
    app: frothly-store
spec:
  rules:
  - http:
      paths:
        - backend:
              serviceName: webfrontend
              servicePort: 8088
          path: /shop*
        - backend:
              serviceName: webfrontend
              servicePort: 8088
          path: /wstatic*
        - backend:
              serviceName: adminfrontend
              servicePort: 3000
          path: /admin*
        - backend:
              serviceName: adminfrontend
              servicePort: 3000
          path: /astatic*
        - backend:
              serviceName: cartservice
              servicePort: 4201
          path: /cart*
        - backend:
              serviceName: ordersservice
              servicePort: 4201
          path: /orders*
        - backend:
              serviceName: productservice
              servicePort: 6767
          path: /products*          
        - backend:
              serviceName: webfrontend
              servicePort: 8088
          path: /*
#       - backend:
#             serviceName: ghost
#             servicePort: 2368
#         path: /
